GNOME Bugzilla – Bug 588379
testgtk::panes does not change the cursor on mouse over the grip
Last modified: 2009-07-13 07:56:37 UTC
As mentioned in http://mail.gnome.org/archives/gtk-devel-list/2009-July/msg00010.html
Fix pushed as http://git.gnome.org/cgit/gtk+/commit/?id=c99b4e775b23d6cdd3e616fb04728bb7a13bba22