Bug #588379 - testgtk::panes does not change the cursor on mouse over

That one was easy, just removing Alex's #ifdef TODO_CSW ;)

http://bugzilla.gnome.org/show_bug.cgi?id=588379